--- a/rational.tex
+++ b/rational.tex
@@ -1,4 +1,5 @@
 %!TEX root = ts.tex
+\begin{addedblock}
 
 \rSec0[rational.math]{Rational math}
 
@@ -597,3 +598,5 @@ bool operator>=(const integer& lhs, const rational& rhs);
 \begin{itemdescr}
 \returns \tcode{rhs <= lhs}.
 \end{itemdescr}
+
+\end{addedblock}
