paper number and minor formatting fixes

--- a/cover-wd.tex
+++ b/cover-wd.tex
@@ -8,7 +8,8 @@
 \def\hd{\begin{tabular}{ll}
           \textbf{Document Number:} & {\larger\docno}             \\
           \textbf{Date:}            & \reldate                    \\
-          \textbf{Revises:}         & \prevdocno                  \\
+          \textbf{Audience:}        & SG6 Numerics                \\
+          %\textbf{Revises:}         & \prevdocno                  \\
           \textbf{Reply to:}        & Alexander Zaitsev           \\
                                     & zamazan4ik@tut.by           \\
                                     & Antony Polukhin             \\
