--- a/intro.tex
+++ b/intro.tex
@@ -35,7 +35,7 @@ Follow mathematical behavior where feasible.
 \end{itemize}
 \item Avoid or hide aliasing effects.
 \item Prefer compile-time errors to run-time errors.
-\item Prefer safe defaults to effient defaults.
+\item Prefer safe defaults to efficient defaults.
 \end{itemize}
 
 Provide types that match the taxonomic needs.
