--- a/config.tex
+++ b/config.tex
@@ -1,7 +1,7 @@
 %!TEX root = ts.tex
 %%--------------------------------------------------
 %% Version numbers
-\newcommand{\docno}{Dxxxx}
+\newcommand{\docno}{P1889R0}
 \newcommand{\prevdocno}{Nxxxx}
 \newcommand{\tsver}{201909}
 
